--- a/assets/articleSite.css
+++ b/assets/articleSite.css
@@ -4,9 +4,23 @@
     margin: 100px auto 0 auto;
 }
 
+.articleSite h1 {
+    margin-top: 5px;
+    color: #333;
+    font-size: 2.5rem;
+}
+
+.articleSite h2 {
+    margin-top: 5px;
+    color: #a880b9;
+    text-decoration: underline;
+    font-size: 1.8rem;
+}
+
 .articleSiteCategory{
     display: flex;
     color: var(--color-text);
+    margin-top: 10px;
 }
 
 .articleCategoryBox {
@@ -22,7 +36,7 @@
 .articleImgBox {
     margin-top: 50px;
     width: 100%;
-    height: 500px;
+    height: 700px;
     border-radius: 10px;
     overflow: hidden;
 }
@@ -44,6 +58,7 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
+    color: #444;
 }
 
 .articleDel{
@@ -58,7 +73,7 @@
 .articleDelText{
     font-size: 1.5rem;
     padding: 0 2rem;
-    
+    color: #333;
 }
 
 .articleDelText2{
@@ -72,7 +87,7 @@
     display: flex;
     justify-content: space-evenly;
     margin: 0 auto 0 auto;
-    padding: 1rem 0;
+    padding: 1rem 0 0 0;
 }
 
 .articleSocialMediaIconFB{
@@ -117,10 +132,418 @@
     display: flex;
 }
 
-.articleSectionContent {
-    display: flex;
-    justify-content: space-evenly;
-    width: 100%;
+
+@media (width < 1300px) {
+.articleSite{
+    width: var(--width-box-medium);
+    align-items: center;
+    margin: 100px auto 0 auto;
 }
 
+.articleSite h1 {
+    margin-top: 5px;
+    font-size: 2.125rem;
+}
 
+.articleSite h2 {
+    margin-top: 5px;
+    color: #a880b9;
+    text-decoration: underline;
+    font-size: 1.53rem;
+}
+
+.articleSiteCategory{
+    display: flex;
+    color: var(--color-text);
+    margin-top: 10px;
+}
+
+.articleCategoryBox {
+    margin-right: 20px;
+    padding: 0.34rem 1.02rem;
+    font-size: 10.2px;
+    border-radius: 10px;
+    align-items: center;
+    background-color: var(--color-primary);
+    width: auto;
+}
+
+.articleImgBox {
+    margin-top: 50px;
+    width: 100%;
+    height: 595px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.articleImgBox img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.articleSiteSetup{
+    width: 697px;
+    margin: 20px auto 0 auto;
+}
+
+.articleAuthorText{
+    padding: 1rem 0;
+    border-bottom: 2px solid var(--color-primary);
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    color: #444;
+}
+
+.articleDel{
+    display: flex;
+    align-items: center;
+}
+
+.articleBorder {
+    border: 1px solid var(--color-primary);
+}
+
+.articleDelText{
+    font-size: 1.275rem;
+    padding: 0 2rem;
+    
+}
+
+.articleDelText2{
+    font-size: 1.7rem;
+    padding: 0 2rem;
+    
+}
+
+.articleSocialMedia{
+    width: 510px;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 auto 0 auto;
+    padding: 1rem 0 0 0;
+}
+
+.articleSocialMediaIconFB{
+    display: flex;
+    justify-content: center;
+    padding: 0.68rem 2.55rem;
+    background-color: #1877F2;
+    align-items: center;
+    color: var(--color-text);
+}
+
+.articleSocialMediaIconYT{
+    display: flex;
+    justify-content: center;
+    padding: 0.68rem 2.55rem;
+    background-color: #CD201F;
+    align-items: center;
+    color: var(--color-text);
+}
+
+.articleSocialMediaIconX{
+    display: flex;
+    justify-content: center;
+    padding: 0.68rem 2.55rem;
+    background-color: #000000;
+    align-items: center;
+    color: var(--color-text);
+}
+
+.articleSocialMediaIconLN{
+    display: flex;
+    justify-content: center;
+    padding: 0.68rem 2.55rem;
+    background-color: #0e76a8;
+    align-items: center;
+    color: var(--color-text);
+}
+
+.articleSectionRelated{
+    width: 100%;
+    margin: 50px auto 0 auto;
+    display: flex;
+}
+}
+
+@media (width < 1000px) {
+.articleSite{
+    width: var(--width-box-small);
+    align-items: center;
+    margin: 100px auto 0 auto;
+}
+
+.articleSite h1 {
+    margin-top: 5px;
+    font-size: 1.806rem;
+}
+
+.articleSite h2 {
+    margin-top: 5px;
+    color: #a880b9;
+    text-decoration: underline;
+    font-size: 1.3005rem;
+}
+
+.articleSiteCategory{
+    display: flex;
+    color: var(--color-text);
+    margin-top: 10px;
+}
+
+.articleCategoryBox {
+    margin-right: 20px;
+    padding: 0.289rem 0.867rem;
+    font-size: 8.67px;
+    border-radius: 10px;
+    align-items: center;
+    background-color: var(--color-primary);
+    width: auto;
+}
+
+.articleImgBox {
+    margin-top: 50px;
+    width: 100%;
+    height: 505px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.articleImgBox img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.articleSiteSetup{
+    width: 592px;
+    margin: 20px auto 0 auto;
+}
+
+.articleAuthorText{
+    padding: 1rem 0;
+    border-bottom: 2px solid var(--color-primary);
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    color: #444;
+}
+
+.articleDel{
+    display: flex;
+    align-items: center;
+}
+
+.articleBorder {
+    border: 1px solid var(--color-primary);
+}
+
+.articleDelText{
+    font-size: 1.08375rem;
+    padding: 0 2rem;
+    
+}
+
+.articleDelText2{
+    font-size: 1.445rem;
+    padding: 0 2rem;
+    
+}
+
+.articleSocialMedia{
+    width: 433.5px;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 auto 0 auto;
+    padding: 1rem 0 0 0;
+}
+
+.articleSocialMediaIconFB{
+    display: flex;
+    justify-content: center;
+    padding: 0.578rem 2.1675rem;
+    background-color: #1877F2;
+    align-items: center;
+    color: var(--color-text);
+}
+
+.articleSocialMediaIconYT{
+    display: flex;
+    justify-content: center;
+    padding: 0.578rem 2.1675rem;
+    background-color: #CD201F;
+    align-items: center;
+    color: var(--color-text);
+}
+
+.articleSocialMediaIconX{
+    display: flex;
+    justify-content: center;
+    padding: 0.578rem 2.1675rem;
+    background-color: #000000;
+    align-items: center;
+    color: var(--color-text);
+}
+
+.articleSocialMediaIconLN{
+    display: flex;
+    justify-content: center;
+    padding: 0.578rem 2.1675rem;
+    background-color: #0e76a8;
+    align-items: center;
+    color: var(--color-text);
+}
+
+.articleSectionRelated{
+    width: 100%;
+    margin: 50px auto 0 auto;
+    display: flex;
+}
+
+}
+
+@media (width < 768px) {
+.articleSite{
+    min-width: var(--width-12col-mobile);
+    width: 100%;
+    align-items: center;
+    margin: 100px auto 0 auto;
+}
+
+.articleSite h1 {
+    margin-top: 5px;
+    font-size: 1.806rem;
+    padding-left: 5%;
+}
+
+.articleSite h2 {
+    margin-top: 5px;
+    color: #a880b9;
+    text-decoration: underline;
+    font-size: 1.3005rem;
+    padding-left: 5%;
+}
+
+.articleSiteCategory{
+    display: flex;
+    color: var(--color-text);
+    margin-top: 10px;
+    padding-left: 2.5%;
+}
+
+.articleCategoryBox {
+    margin-right: 20px;
+    padding: 0.289rem 0.867rem;
+    font-size: 8.67px;
+    border-radius: 10px;
+    align-items: center;
+    background-color: var(--color-primary);
+    width: auto;
+}
+
+.articleImgBox {
+    width: 90%;
+    height: 429.25px;
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 50px auto;
+}
+
+.articleImgBox img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.articleSiteSetup{
+    width: 80%;
+    margin: 20px auto 0 auto;
+}
+
+.articleAuthorText{
+    padding: 1rem 0;
+    border-bottom: 2px solid var(--color-primary);
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    color: #444;
+}
+
+.articleDel{
+    display: flex;
+    align-items: center;
+}
+
+.articleBorder {
+    border: 1px solid var(--color-primary);
+}
+
+.articleDelText{
+    font-size: 1.08375rem;
+    padding: 0 2rem;
+    
+}
+
+.articleDelText2{
+    font-size: 1.445rem;
+    padding: 0 2rem;
+    
+}
+
+.articleSocialMedia{
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 0 auto 0 auto;
+    padding: 1rem 0 0 0;
+}
+
+.articleSocialMediaIconFB{
+    display: flex;
+    justify-content: center;
+    padding: 0.578rem 2.1675rem;
+    background-color: #1877F2;
+    align-items: center;
+    color: var(--color-text);
+    margin-bottom: 2rem;
+}
+
+.articleSocialMediaIconYT{
+    display: flex;
+    justify-content: center;
+    padding: 0.578rem 2.1675rem;
+    background-color: #CD201F;
+    align-items: center;
+    color: var(--color-text);
+    margin-bottom: 2rem;
+}
+
+.articleSocialMediaIconX{
+    display: flex;
+    justify-content: center;
+    padding: 0.578rem 2.1675rem;
+    background-color: #000000;
+    align-items: center;
+    color: var(--color-text);
+    margin-bottom: 2rem;
+}
+
+.articleSocialMediaIconLN{
+    display: flex;
+    justify-content: center;
+    padding: 0.578rem 2.1675rem;
+    background-color: #0e76a8;
+    align-items: center;
+    color: var(--color-text);
+    margin-bottom: 2rem;
+}
+
+.articleSectionRelated{
+    width: 100%;
+    margin: 50px auto 0 auto;
+    display: flex;
+}
+}
