--- a/assets/videoSite.css
+++ b/assets/videoSite.css
@@ -1,180 +1,82 @@
 .videoSection {
-    background-color: #f7f6f7;
-    padding: 2rem;
     position: relative;
     align-items: center;
     width: var(--width-12col);
     margin: 0 auto 0 auto;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 2rem;
+    padding-bottom: 60px;
   }
 
-  .videoSectionHeader {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    align-items: center;
-    border-bottom: 6px solid var(--color-primary);
-    margin-bottom: 40px;
-  }
-
-  .videoSectionHeader h5 {
-    color: var(--color-text);
-    background-color: var(--color-primary);
-    padding: 0.5rem;
-    display: inline-block;
-    border-radius: 20px 20px 0 0;
-  }
-
-  .videoSectionContent {
-    max-height: 300px;
-    display: flex;
-    overflow-x: auto;
-  }
-
-  .videoSectionContent ::-webkit-scrollbar {
-    display: none;
-  }
-
-  .videoSectionContent, .videoContainer {
-    min-width: 480px;
-    min-height: 280px;
-    line-height: 110px;
-    text-align: center;
-
-    margin-right: 4px;
-  }
-
-  .videoContainer iframe {
-    width: 100%;
-    height: 100%;
-
-  }
-  
-  /* footer */
-
-  .main-footer {
-  margin-top: 100px;
-  background-color: var(--color-background);
-  color: #fff;
-  padding: 20px 16px 0 16px;
-  font-family: sans-serif;
+.galleryVideoContainer {
+  grid-column: span 6;
 }
 
-.footer-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 2rem;
-  max-width: 1200px;
-  margin: 0 auto;
+.galleryVideo {
+  margin-bottom: 3rem;
 }
 
-.footer-col {
-  flex: 1 1 200px;
-  min-width: 200px;
-}
-
-.footer-col h4 {
-  font-size: 1rem;
-  margin-bottom: 1rem;
-  position: relative;
-  padding-bottom: 0.5rem;
-}
-
-.footer-col h4::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 2px;
+.galleryVideo iframe{
+  height: 315px;
   width: 100%;
-  background-color: #b08fc4;
-}
-
-.footer-col ul {
-  list-style: none;
-  padding: 0;
-}
-.footer-col ul li {
-  margin-bottom: 0.5rem;
-}
-.footer-col ul li a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 0.9rem;
-}
-.footer-col ul li a:hover {
-  text-decoration: underline;
-}
-
-.contact-info {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.contact-item {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.contact-item .dot {
-  width: 12px;
-  height: 12px;
-  background-color: #ccc;
-  border-radius: 50%;
-  margin-top: 0.3rem;
-}
-
-.contact-item p,
-.contact-item small {
-  font-size: 0.85rem;
-  color: #ddd;
-}
-
-.footer-newsletter {
-  flex: 1 1 280px;
-  min-width: 260px;
-}
-
-.footer-newsletter p {
-  font-size: 0.9rem;
   margin-bottom: 1rem;
-  color: #ddd;
+
 }
 
-.footer-newsletter em {
-  color: #b08fc4;
-  font-style: normal;
-  font-weight: 500;
+.galleryVideo h4{
+  font-size: 30.6px;
+  line-height: 35.4px;   
+  letter-spacing: 1px;
+  color: #333;
 }
 
-.newsletter-btn {
-  background-color: #b08fc4;
-  color: white;
-  padding: 0.6rem 1rem;
-  border-radius: 4px;
-  display: inline-block;
-  font-weight: bold;
-  font-size: 0.9rem;
-  text-decoration: none;
+@media (width < 1300px) {
+.videoSection {
+    width: var(--width-box-medium);
+    gap: 2rem;
+    padding-bottom: 60px;
+  }
+
+  .galleryVideo h4{
+          font-size: 26px;
+  line-height: 35.4px;   
+  letter-spacing: 1px;
+}
 }
 
-.newsletter-btn:hover {
-  background-color: #a07bb8;
+@media (width < 1000px) {
+.videoSection {
+    width: var(--width-box-small);
+    gap: 2rem;
+    padding-bottom: 60px;
+  }
+
+  .galleryVideo h4{
+      font-size: 22.1px;
+  line-height: 28.4px;   
+  letter-spacing: 1px;
+}
 }
 
-.icon-circle {
-  width: 32px;
-  height: 32px;
-  background-color: #b08fc4;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  font-size: 1.1rem;
-  margin-top: 0.1rem;
-  flex-shrink: 0;
+@media (width < 768px) {
+.videoSection {
+    min-width: var(--width-12col-mobile);
+    width: 80%;
+    gap: 2rem;
+    padding-bottom: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .galleryVideo h4{
+      font-size: 22.1px;
+  line-height: 28.4px;   
+  letter-spacing: 1px;
 }
-  
+
+.galleryVideo {
+  width: 100%;
+}
+}
