--- a/style.css
+++ b/style.css
@@ -20,9 +20,6 @@
     /* Colors */
     --color-background: #463C3C;
     --color-text: #FFFFFF;
-    --color-text-secondary: #000000;
-    --color-box: #46B6AF;
-    --color-polaroid: #EDE0CD;
     --color-primary: #A880B9;
   
   }
@@ -58,7 +55,6 @@
 
   .navbar {
   width: 100%;
-  background-color: var(--color-primary);
 }
 
 .navbarContent {
@@ -68,6 +64,94 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  z-index: 10;
+    overflow: hidden;
+      background-color: var(--color-primary);
+}
+
+.search-bar-container {
+  position: relative;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background-color: #f9f9f9;
+  padding: 1rem;
+  opacity: 0;
+  transform: translateY(0px);
+  pointer-events: none;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  z-index: 8;
+}
+
+.search-bar-container.show {
+  opacity: 1;
+  transform: translateY(58.39px);
+  pointer-events: auto;
+}
+
+#ajax-search-input {
+  width: 90%;
+  display: block;
+  margin: 0 auto;
+  font-size: 1.2rem;
+  border: none;
+}
+
+#ajax-search-results {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  z-index: 20;
+  background: white;
+  border: 1px solid #ccc;
+  max-height: 300px;
+  overflow-y: auto;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  border-radius: 6px;
+  padding: 10px;
+  display: none; /* Hidden by default */
+}
+
+.ajax-search-results {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+   transition: 0.2s ease-in-out;
+}
+
+.ajax-search-item {
+  display: flex;
+  gap: 12px;
+  padding: 15px 10px;
+  border-radius: 5px;
+  border-bottom: 1px solid #463C3C;
+}
+
+.ajax-search-item:hover {
+background-color: #F3E8F1;
+}
+
+.ajax-search-thumb img {
+  min-width: 100px;
+  min-height: 60px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+
+.ajax-search-title {
+  font-size: 1.5rem;
+  color: #444;
+}
+
+.ajax-search-category {
+  font-size: 1rem;
+  color: #888;
+}
+
+.menu-item.medlemskabbtn {
+  display: none;
 }
 
 .logo {
@@ -137,6 +221,7 @@
     font-size: 2rem;
     color: var(--color-text-secondary);
     font-weight: 700;
+    color: #444;
   }
 
   h4 {
@@ -169,13 +254,13 @@
     font-weight: 700;
   }
 
-  p2 {
+  .p2 {
     font-size: 1rem;
     color: var(--color-text-secondary);
     font-weight: 400;
   }
 
-  p3 {
+  .p3 {
     font-size: 1.2rem;
     color: var(--color-text);
     font-weight: 600;
@@ -184,9 +269,7 @@
 
   .SiteBody{
     width: var(--width-full);
-    margin: 0 auto 200px auto;
     justify-content: center;
-    height: 600px;
   }
 
   .SiteImage {
@@ -199,7 +282,7 @@
 
   .SiteImage img{
     width: 100%;
-    height: 100%;
+  height: 500px;
     z-index: -1;
     justify-content: center;
     display: flex;
@@ -210,7 +293,7 @@
   .SiteImgGrad{
   z-index: 1;
   width: 100%;
-  height: 100%;
+  height: 500px;
   background: #FDF6FA;
   background: linear-gradient(180deg,rgba(253, 246, 250, 0) 50%, rgba(253, 246, 250, 1) 100%);
 
@@ -244,22 +327,25 @@
 .main-footer {
   background-color: var(--color-background);
   color: #fff;
-  padding: 20px 16px 0 16px;
+  padding: 20px 10% 20px 10%;
   font-family: sans-serif;
+  margin-top: 50px;
 }
 
 .footer-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   gap: 2rem;
-  max-width: 1200px;
-  margin: 0 auto;
+    display: grid;
+  grid-template-columns: repeat(12, 1fr);
 }
 
 .footer-col {
   flex: 1 1 200px;
   min-width: 200px;
+  grid-column: span 3;
+}
+
+.footer-col:nth-child(2){
+  order: 4;
 }
 
 .footer-col h4 {
@@ -267,6 +353,7 @@
   margin-bottom: 1rem;
   position: relative;
   padding-bottom: 0.5rem;
+  color: #eee;
 }
 
 .footer-col h4::after {
@@ -287,7 +374,7 @@
   margin-bottom: 0.5rem;
 }
 .footer-col ul li a {
-  color: #fff;
+  color: #ddd;
   text-decoration: none;
   font-size: 0.9rem;
 }
@@ -310,7 +397,7 @@
 .contact-item .dot {
   width: 12px;
   height: 12px;
-  background-color: #ccc;
+  background-color: #ddd;
   border-radius: 50%;
   margin-top: 0.3rem;
 }
@@ -321,37 +408,6 @@
   color: #ddd;
 }
 
-.footer-newsletter {
-  flex: 1 1 280px;
-  min-width: 260px;
-}
-
-.footer-newsletter p {
-  font-size: 0.9rem;
-  margin-bottom: 1rem;
-  color: #ddd;
-}
-
-.footer-newsletter em {
-  color: #b08fc4;
-  font-style: normal;
-  font-weight: 500;
-}
-
-.newsletter-btn {
-  background-color: #b08fc4;
-  color: white;
-  padding: 0.6rem 1rem;
-  border-radius: 4px;
-  display: inline-block;
-  font-weight: bold;
-  font-size: 0.9rem;
-  text-decoration: none;
-}
-
-.newsletter-btn:hover {
-  background-color: #a07bb8;
-}
 
 .icon-circle {
   width: 32px;
@@ -361,10 +417,76 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff;
+  color: #ddd;
   font-size: 1.1rem;
   margin-top: 0.1rem;
   flex-shrink: 0;
+}
+
+.newsletterSignup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.newsletterInputWrapperFooter {
+  position: relative;
+  width: auto;
+  height: 60px;
+  color: black;
+  background-color: white;
+  border-radius: 10px;
+  font-weight: 400;
+}
+
+.newsletterInputWrapperFooter i {
+  position: absolute;
+  left: 17px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 1rem;
+  color: #80808E;
+  pointer-events: none;
+}
+
+.newsletterInputFooter {
+  width: 100%;
+  height: 100%;
+  padding-left: 40px; /* space for the icon */
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  box-sizing: border-box;
+}
+
+.newsletterButtonFooter {
+  width: 60%;
+  height: 50px;
+  background: #A880B9;
+  color: #ffffff;
+  font-weight: 600;
+  font-size: 1rem;
+  border-radius: 1rem;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px auto 0 auto;
+}
+
+
+.newsletterButtonFooter:hover {
+  background: #8c6ca3;
+}
+
+
+#newsletterMessageFooter {
+   font-size: 1.2rem;
+  font-weight: 500;
+  margin-top: 15px;
+  text-align: center;
 }
 
   /* css for index.html starter her under */
@@ -394,17 +516,22 @@
   top: 0;
   left: 0;
   z-index: 20;
+  height: 61px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
   .nav-Logo {
     transform: scale(0.9);
+    height: 40.8px;
   }
 
 .nav-content {
   display: flex;
   justify-content: space-between;
-  padding-right: 1rem;
-  
+  padding: 0 2rem;
+  width: 100%;
 }
 
 .nav-buttons {
@@ -428,11 +555,11 @@
   color: #ddd;
 }
 
-/* Dropdown - now narrow and aligned right */
+
 .dropdown-nav {
   position: fixed;
-  top: 65px;
-  right: -350px; /* Start offscreen */
+  top: 61px;
+  right: -350px; 
   width: 350px;
   height: calc(100% - 65px);
   background-color: #FDF6FA;
@@ -444,7 +571,7 @@
 }
 
 .dropdown-nav.open {
-  right: 0; /* Slide into view */
+  right: 0; 
 }
 
 .overlay {
@@ -547,3 +674,152 @@
 .overlay.show {
   display: block;
 }
+
+@media (width < 1300px) {
+
+  .nav-btn {
+  font-size: 0.935rem;
+  gap: 1rem;
+}
+
+  .nav-Logo {
+    transform: scale(0.9);
+    height: 34.68px;
+  }
+
+  .SiteImage {
+  height: 425px !important;
+  }
+
+  .SiteImage img{
+  height: 425px;
+  }
+
+  .SiteImgGrad{
+  height: 425px;
+}
+
+.footer-col {
+  flex: 1 1 200px;
+  min-width: 200px;
+  grid-column: span 6;
+}
+
+.footer-col:nth-child(2){
+  order: 0;
+}
+
+.footer-col h4 {
+  font-size: 0.85rem;
+  margin-bottom: 1rem;
+  padding-bottom: 0.5rem;
+}
+
+.footer-col h4::after {
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 100%;
+}
+
+
+.footer-col ul li {
+  margin-bottom: 0.5rem;
+}
+.footer-col ul li a {
+  font-size: 0.765rem;
+}
+
+.icon-circle {
+  width: 27.2px;
+  height: 27.2px;
+  font-size: 1.1rem;
+  margin-top: 0.1rem;
+}
+
+}
+
+@media (width < 1000px) {
+
+.nav-content {
+  padding: 0 1rem 0 0.1rem;
+
+}
+
+.nav-buttons {
+  display: flex;
+  gap: 2rem;
+}
+
+ .nav-btn {
+  gap: 0.3rem;
+  font-size: 0.795rem;
+}
+
+  .nav-Logo {
+    max-height: 29.478px;
+    height: 100%;
+    transform: scale(0.9);
+  }
+
+  .SiteImage {
+  height: 361px !important;
+  }
+
+
+.ajax-search-title {
+  font-size: 1.2rem;
+  color: #444;
+}
+
+.ajax-search-category {
+  font-size: 0.85rem;
+  color: #888;
+}
+
+
+
+}
+
+@media (width < 768px) {
+
+.main-footer {
+  padding: 20px 10% 20px 10%;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.footer-col{
+  grid-column: 2/11;
+}
+
+.footer-container {
+  margin: 0;
+  width: 100%;
+}
+
+.menu-item.medlemskabbtn {
+  display: initial;
+}
+
+.nav-btn.medlemskab {
+  display: none;
+}
+.SiteImage {
+  height: 307px !important;
+  }
+
+.ajax-search-title {
+  font-size: 1rem;
+  color: #444;
+}
+
+.ajax-search-category {
+  font-size: 0.75rem;
+  color: #888;
+}
+}
+
